# TorchSystem

./: 404.html  README.md  index.html  main.py  mkdocs.yml  notebook.ipynb  objects.inv  pyproject.toml
.github/workflows/: python-CI.yml
aggregates/: index.html
compiler/: index.html
depends/: index.html
dev/: README.md  messages.py  repository.py
docs/: aggregate.md  aggregates.md  compiler.md  depends.md  domain.md  index.md  prodcon.md  pubsub.md  registry.md  repository.md  services.md  storage.md
domain/: index.html
examples/: README.md
examples/_1_simple_mnist/: aggregate.py  dataset.py  handlers.py  model.py  notebook.ipynb  repository.py
examples/_2_with_events/: aggregate.py  events.py  handlers.py  model.py  notebook.ipynb  repository.py
examples/basic/: dataset.py  model.py  notebook.ipynb
examples/cifar-vit/: dataset.py  main.py  model.py
examples/mnist-mlp/: dataset.py  main.py  model.py
examples/simple_example/: aggregate.py  model.py  (+3 more)
prodcon/: index.html
pubsub/: index.html
registry/: index.html
repository/: index.html
services/: index.html
storage/: index.html
tests/: conftest.py  test_aggregate.py  test_compiler.py  test_deps.py  test_events.py  test_loaders.py  test_metrics.py  test_prodcon.py  test_pubsub.py  test_registry.py  test_repository.py  test_service.py  test_storage.py
torchsystem/: __init__.py  aggregate.py  callbacks.py  commands.py  compiler.py  depends.py  events.py  interfaces.py  loaders.py  loggings.py  messages.py  registry.py  repository.py  schemas.py  settings.py  storage.py  weights.py
(+59 files in other folders)
