[tool.poetry]
name = "torchsystem"
version = "1.0.5"
description = "An IA training system, based on domain driven design and an event driven architecture, created on top of the pybondi library."
authors = ["Eric Cardozo <eric.m.cardozo@mi.unc.edu.ar>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic-settings = "^2.7.1"
mlregistry = "^1.0.3"
pymsgbus = "^0.1.0"


[tool.poetry.group.tests.dependencies]
pytest = "^8.3.4"
torch = "^2.5.1"
numpy = "^2.2.1"
torchvision = "^0.20.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"